--- a/_coverage/index.html
+++ b/_coverage/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8"/>
     <title>Coverage report</title>
-    <meta name="description" content="76.03% coverage overall"/>
+    <meta name="description" content="28.98% coverage overall"/>
     <link rel="stylesheet" type="text/css" href="coverage.css"/>
   </head>
   <body>
     <div id="header">
       <h1>Coverage report</h1>
-      <h2>76.03%</h2>
+      <h2>28.98%</h2>
     </div>
     <div id="files">
       <div>
@@ -23,27 +23,36 @@
       </div>
       <div>
         <span class="meter">
-          <span class="covered" style="width: 72%"></span>
+          <span class="covered" style="width: 88%"></span>
         </span>
-        <span class="percentage">72% <span class="stats">(120 / 166)</span></span>
+        <span class="percentage">88% <span class="stats">(46 / 52)</span></span>
+        <a href="lib/optimizer.ml.html">
+          <span class="dirname">lib/</span>optimizer.ml
+        </a>
+      </div>
+      <div>
+        <span class="meter">
+          <span class="covered" style="width: 0%"></span>
+        </span>
+        <span class="percentage">0% <span class="stats">(0 / 166)</span></span>
         <a href="lib/refresh.ml.html">
           <span class="dirname">lib/</span>refresh.ml
         </a>
       </div>
       <div>
         <span class="meter">
-          <span class="covered" style="width: 89%"></span>
+          <span class="covered" style="width: 16%"></span>
         </span>
-        <span class="percentage">89% <span class="stats">(50 / 56)</span></span>
+        <span class="percentage">16% <span class="stats">(9 / 56)</span></span>
         <a href="lib/stock_cache.ml.html">
           <span class="dirname">lib/</span>stock_cache.ml
         </a>
       </div>
       <div>
         <span class="meter">
-          <span class="covered" style="width: 63%"></span>
+          <span class="covered" style="width: 20%"></span>
         </span>
-        <span class="percentage">63% <span class="stats">(77 / 122)</span></span>
+        <span class="percentage">20% <span class="stats">(50 / 244)</span></span>
         <a href="test/test_refresh.ml.html">
           <span class="dirname">test/</span>test_refresh.ml
         </a>
