changed test_refresh to not max out the API Key

--- a/_coverage/lib/stock_cache.ml.html
+++ b/_coverage/lib/stock_cache.ml.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>stock_cache.ml &mdash; Coverage report</title>
-    <meta name="description" content="16.07% coverage in lib/stock_cache.ml">
+    <meta name="description" content="91.07% coverage in lib/stock_cache.ml">
     <link rel="stylesheet" href="../coverage.css"/>
     <script src="../highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
@@ -15,43 +15,13 @@
           <span class="dirname">lib/</span>stock_cache.ml
         </a>
       </h1>
-      <h2>16.07%</h2>
+      <h2>91.07%</h2>
     </div>
     <div id="navbar">
       <span class="unvisited" style="top:14.88%"></span>
-      <span class="unvisited" style="top:18.18%"></span>
-      <span class="unvisited" style="top:29.75%"></span>
-      <span class="unvisited" style="top:31.40%"></span>
-      <span class="unvisited" style="top:32.23%"></span>
-      <span class="unvisited" style="top:33.06%"></span>
-      <span class="unvisited" style="top:33.88%"></span>
-      <span class="unvisited" style="top:34.71%"></span>
-      <span class="unvisited" style="top:35.54%"></span>
-      <span class="unvisited" style="top:36.36%"></span>
-      <span class="unvisited" style="top:37.19%"></span>
-      <span class="unvisited" style="top:38.02%"></span>
       <span class="unvisited" style="top:46.28%"></span>
-      <span class="unvisited" style="bottom:47.11%"></span>
-      <span class="unvisited" style="bottom:46.28%"></span>
-      <span class="unvisited" style="bottom:44.63%"></span>
-      <span class="unvisited" style="bottom:43.80%"></span>
-      <span class="unvisited" style="bottom:42.15%"></span>
-      <span class="unvisited" style="bottom:41.32%"></span>
       <span class="unvisited" style="bottom:40.50%"></span>
       <span class="unvisited" style="bottom:38.84%"></span>
-      <span class="unvisited" style="bottom:33.88%"></span>
-      <span class="unvisited" style="bottom:33.06%"></span>
-      <span class="unvisited" style="bottom:30.58%"></span>
-      <span class="unvisited" style="bottom:28.93%"></span>
-      <span class="unvisited" style="bottom:27.27%"></span>
-      <span class="unvisited" style="bottom:26.45%"></span>
-      <span class="unvisited" style="bottom:23.14%"></span>
-      <span class="unvisited" style="bottom:22.31%"></span>
-      <span class="unvisited" style="bottom:21.49%"></span>
-      <span class="unvisited" style="bottom:16.53%"></span>
-      <span class="unvisited" style="bottom:12.40%"></span>
-      <span class="unvisited" style="bottom:11.57%"></span>
-      <span class="unvisited" style="bottom:7.44%"></span>
       <span class="some-visited" style="bottom:0.83%"></span>
     </div>
     <div id="report">
@@ -78,7 +48,7 @@
 <a id="L19"></a><span > </span>
 <a id="L20"></a><span > </span>
 <a id="L21"></a><span > </span>
-<a id="L22"></a><span class="unvisited"> </span>
+<a id="L22"></a><span class="visited"> </span>
 <a id="L23"></a><span > </span>
 <a id="L24"></a><span > </span>
 <a id="L25"></a><span > </span>
@@ -92,17 +62,17 @@
 <a id="L33"></a><span > </span>
 <a id="L34"></a><span > </span>
 <a id="L35"></a><span > </span>
-<a id="L36"></a><span class="unvisited"> </span>
+<a id="L36"></a><span class="visited"> </span>
 <a id="L37"></a><span > </span>
-<a id="L38"></a><span class="unvisited"> </span>
-<a id="L39"></a><span class="unvisited"> </span>
-<a id="L40"></a><span class="unvisited"> </span>
-<a id="L41"></a><span class="unvisited"> </span>
-<a id="L42"></a><span class="unvisited"> </span>
-<a id="L43"></a><span class="unvisited"> </span>
-<a id="L44"></a><span class="unvisited"> </span>
-<a id="L45"></a><span class="unvisited"> </span>
-<a id="L46"></a><span class="unvisited"> </span>
+<a id="L38"></a><span class="visited"> </span>
+<a id="L39"></a><span class="visited"> </span>
+<a id="L40"></a><span class="visited"> </span>
+<a id="L41"></a><span class="visited"> </span>
+<a id="L42"></a><span class="visited"> </span>
+<a id="L43"></a><span class="visited"> </span>
+<a id="L44"></a><span class="visited"> </span>
+<a id="L45"></a><span class="visited"> </span>
+<a id="L46"></a><span class="visited"> </span>
 <a id="L47"></a><span > </span>
 <a id="L48"></a><span > </span>
 <a id="L49"></a><span > </span>
@@ -120,14 +90,14 @@
 <a id="L61"></a><span class="visited"> </span>
 <a id="L62"></a><span class="visited"> </span>
 <a id="L63"></a><span > </span>
-<a id="L64"></a><span class="unvisited"> </span>
-<a id="L65"></a><span class="unvisited"> </span>
+<a id="L64"></a><span class="visited"> </span>
+<a id="L65"></a><span class="visited"> </span>
 <a id="L66"></a><span > </span>
-<a id="L67"></a><span class="unvisited"> </span>
-<a id="L68"></a><span class="unvisited"> </span>
+<a id="L67"></a><span class="visited"> </span>
+<a id="L68"></a><span class="visited"> </span>
 <a id="L69"></a><span > </span>
-<a id="L70"></a><span class="unvisited"> </span>
-<a id="L71"></a><span class="unvisited"> </span>
+<a id="L70"></a><span class="visited"> </span>
+<a id="L71"></a><span class="visited"> </span>
 <a id="L72"></a><span class="unvisited"> </span>
 <a id="L73"></a><span > </span>
 <a id="L74"></a><span class="unvisited"> </span>
@@ -136,39 +106,39 @@
 <a id="L77"></a><span > </span>
 <a id="L78"></a><span > </span>
 <a id="L79"></a><span > </span>
-<a id="L80"></a><span class="unvisited"> </span>
-<a id="L81"></a><span class="unvisited"> </span>
+<a id="L80"></a><span class="visited"> </span>
+<a id="L81"></a><span class="visited"> </span>
 <a id="L82"></a><span > </span>
 <a id="L83"></a><span > </span>
-<a id="L84"></a><span class="unvisited"> </span>
+<a id="L84"></a><span class="visited"> </span>
 <a id="L85"></a><span > </span>
-<a id="L86"></a><span class="unvisited"> </span>
+<a id="L86"></a><span class="visited"> </span>
 <a id="L87"></a><span > </span>
-<a id="L88"></a><span class="unvisited"> </span>
-<a id="L89"></a><span class="unvisited"> </span>
+<a id="L88"></a><span class="visited"> </span>
+<a id="L89"></a><span class="visited"> </span>
 <a id="L90"></a><span > </span>
 <a id="L91"></a><span > </span>
 <a id="L92"></a><span > </span>
-<a id="L93"></a><span class="unvisited"> </span>
-<a id="L94"></a><span class="unvisited"> </span>
-<a id="L95"></a><span class="unvisited"> </span>
+<a id="L93"></a><span class="visited"> </span>
+<a id="L94"></a><span class="visited"> </span>
+<a id="L95"></a><span class="visited"> </span>
 <a id="L96"></a><span > </span>
 <a id="L97"></a><span > </span>
 <a id="L98"></a><span > </span>
 <a id="L99"></a><span > </span>
 <a id="L100"></a><span > </span>
-<a id="L101"></a><span class="unvisited"> </span>
+<a id="L101"></a><span class="visited"> </span>
 <a id="L102"></a><span > </span>
 <a id="L103"></a><span > </span>
 <a id="L104"></a><span > </span>
 <a id="L105"></a><span > </span>
-<a id="L106"></a><span class="unvisited"> </span>
-<a id="L107"></a><span class="unvisited"> </span>
+<a id="L106"></a><span class="visited"> </span>
+<a id="L107"></a><span class="visited"> </span>
 <a id="L108"></a><span > </span>
 <a id="L109"></a><span > </span>
 <a id="L110"></a><span > </span>
 <a id="L111"></a><span > </span>
-<a id="L112"></a><span class="unvisited"> </span>
+<a id="L112"></a><span class="visited"> </span>
 <a id="L113"></a><span > </span>
 <a id="L114"></a><span > </span>
 <a id="L115"></a><span > </span>
@@ -319,13 +289,13 @@ let cache_file = "data/stock_cache.json"
 
 (* Ensure data directory exists *)
 let ensure_data_dir () =
-  <span data-count="4">t</span>ry
-    if not (Sys.file_exist<span data-count="4">s</span> "data") then <span data-count="1">U</span>nix.mkdi<span data-count="1">r</span> "data" 0o755
+  <span data-count="16">t</span>ry
+    if not (Sys.file_exist<span data-count="16">s</span> "data") then <span data-count="1">U</span>nix.mkdi<span data-count="1">r</span> "data" 0o755
   with <span data-count="0">U</span>nix.Unix_error _ -&gt; ()
 
 (* Convert cached_stock to JSON *)
 let cached_stock_to_json (stock : cached_stock) : Yojson.Safe.t =
-  <span data-count="0">`</span>Assoc
+  <span data-count="8">`</span>Assoc
     [
       ("symbol", `String stock.symbol);
       ("avg_price", `Float stock.summary.avg_price);
@@ -339,17 +309,17 @@ let cached_stock_to_json (stock : cached_stock) : Yojson.Safe.t =
 
 (* Convert JSON to cached_stock *)
 let json_to_cached_stock (json : Yojson.Safe.t) : cached_stock option =
-  <span data-count="0">t</span>ry
+  <span data-count="13">t</span>ry
     let open Yojson.Safe.Util in
-    let symbol = json |&gt; member "symbol" |&gt; <span data-count="0">t</span>o_string in
-    <span data-count="0">l</span>et avg_price = json |&gt; member "avg_price" |&gt; <span data-count="0">t</span>o_float in
-    <span data-count="0">l</span>et cumulative_return = json |&gt; member "cumulative_return" |&gt; <span data-count="0">t</span>o_float in
-    <span data-count="0">l</span>et volatility = json |&gt; member "volatility" |&gt; <span data-count="0">t</span>o_float in
-    <span data-count="0">l</span>et max_drawdown = json |&gt; member "max_drawdown" |&gt; <span data-count="0">t</span>o_float in
-    <span data-count="0">l</span>et sharpe = json |&gt; member "sharpe" |&gt; <span data-count="0">t</span>o_float in
-    <span data-count="0">l</span>et cum_log_return = json |&gt; member "cum_log_return" |&gt; <span data-count="0">t</span>o_float in
-    <span data-count="0">l</span>et last_updated = json |&gt; member "last_updated" |&gt; <span data-count="0">t</span>o_string in
-    <span data-count="0">l</span>et summary : summary =
+    let symbol = json |&gt; member "symbol" |&gt; <span data-count="13">t</span>o_string in
+    <span data-count="13">l</span>et avg_price = json |&gt; member "avg_price" |&gt; <span data-count="13">t</span>o_float in
+    <span data-count="13">l</span>et cumulative_return = json |&gt; member "cumulative_return" |&gt; <span data-count="13">t</span>o_float in
+    <span data-count="13">l</span>et volatility = json |&gt; member "volatility" |&gt; <span data-count="13">t</span>o_float in
+    <span data-count="13">l</span>et max_drawdown = json |&gt; member "max_drawdown" |&gt; <span data-count="13">t</span>o_float in
+    <span data-count="13">l</span>et sharpe = json |&gt; member "sharpe" |&gt; <span data-count="13">t</span>o_float in
+    <span data-count="13">l</span>et cum_log_return = json |&gt; member "cum_log_return" |&gt; <span data-count="13">t</span>o_float in
+    <span data-count="13">l</span>et last_updated = json |&gt; member "last_updated" |&gt; <span data-count="13">t</span>o_string in
+    <span data-count="13">l</span>et summary : summary =
       {
         avg_price;
         cumulative_return;
@@ -363,59 +333,59 @@ let json_to_cached_stock (json : Yojson.Safe.t) : cached_stock option =
 
 (* Load cache from file *)
 let load_cache () : (string, cached_stock) Hashtbl.t =
-  <span data-count="4">e</span>nsure_data_dir ();
-  <span data-count="4">l</span>et cache = Hashtbl.create 100 in
-  <span data-count="4">t</span>ry
+  <span data-count="12">e</span>nsure_data_dir ();
+  <span data-count="12">l</span>et cache = Hashtbl.create 100 in
+  <span data-count="12">t</span>ry
     let json_str = In_channel.with_open_text cache_file In_channel.input_all in
-    <span data-count="0">l</span>et json = Yojson.Safe.from_string json_str in
-    <span data-count="0">l</span>et open Yojson.Safe.Util in
+    <span data-count="7">l</span>et json = Yojson.Safe.from_string json_str in
+    <span data-count="7">l</span>et open Yojson.Safe.Util in
     (match json with
-    | <span data-count="0">`</span>Assoc stocks -&gt;
-        List.ite<span data-count="0">r</span>
+    | <span data-count="7">`</span>Assoc stocks -&gt;
+        List.ite<span data-count="7">r</span>
           (fun (symbol, stock_json) -&gt;
-            <span data-count="0">m</span>atch json_to_cached_stock stock_json with
-            | <span data-count="0">S</span>ome stock -&gt; Hashtbl.add cache symbol stock
+            <span data-count="13">m</span>atch json_to_cached_stock stock_json with
+            | <span data-count="13">S</span>ome stock -&gt; Hashtbl.add cache symbol stock
             | <span data-count="0">N</span>one -&gt; ())
           stocks
     | <span data-count="0">_</span> -&gt; ());
     cache
-  with <span data-count="4">_</span> -&gt; cache
+  with <span data-count="5">_</span> -&gt; cache
 
 (* Save cache to file *)
 let save_cache (cache : (string, cached_stock) Hashtbl.t) : unit =
-  <span data-count="0">e</span>nsure_data_dir ();
-  <span data-count="0">l</span>et stocks_json =
+  <span data-count="4">e</span>nsure_data_dir ();
+  <span data-count="4">l</span>et stocks_json =
     Hashtbl.fold
       (fun symbol stock acc -&gt;
-        <span data-count="0">(</span>symbol, cached_stock_to_jso<span data-count="0">n</span> stock) :: acc)
+        <span data-count="8">(</span>symbol, cached_stock_to_jso<span data-count="8">n</span> stock) :: acc)
       cache []
-    |&gt; <span data-count="0">L</span>ist.rev |&gt; <span data-count="0">f</span>un lst -&gt; <span data-count="0">`</span>Assoc lst
+    |&gt; <span data-count="4">L</span>ist.rev |&gt; <span data-count="4">f</span>un lst -&gt; <span data-count="4">`</span>Assoc lst
   in
-  <span data-count="0">l</span>et json_str = Yojson.Safe.pretty_to_string stocks_json in
-  <span data-count="0">O</span>ut_channel.with_open_text cache_file (fun oc -&gt; <span data-count="0">O</span>ut_channel.output_string oc json_str)
+  <span data-count="4">l</span>et json_str = Yojson.Safe.pretty_to_string stocks_json in
+  <span data-count="4">O</span>ut_channel.with_open_text cache_file (fun oc -&gt; <span data-count="4">O</span>ut_channel.output_string oc json_str)
 
 (* Get current date as ISO string *)
 let current_date_string () : string =
-  <span data-count="0">l</span>et time = Unix.time () in
-  <span data-count="0">l</span>et tm = Unix.localtime time in
-  <span data-count="0">P</span>rintf.sprintf "%04d-%02d-%02d" (tm.Unix.tm_year + 1900) (tm.Unix.tm_mon + 1)
+  <span data-count="3">l</span>et time = Unix.time () in
+  <span data-count="3">l</span>et tm = Unix.localtime time in
+  <span data-count="3">P</span>rintf.sprintf "%04d-%02d-%02d" (tm.Unix.tm_year + 1900) (tm.Unix.tm_mon + 1)
     tm.Unix.tm_mday
 
 (* Get stock from cache *)
 let get_stock_from_cache (cache : (string, cached_stock) Hashtbl.t)
     (symbol : string) : cached_stock option =
-  <span data-count="0">H</span>ashtbl.find_opt cache (String.uppercase_asci<span data-count="0">i</span> symbol)
+  <span data-count="4">H</span>ashtbl.find_opt cache (String.uppercase_asci<span data-count="4">i</span> symbol)
 
 (* Add or update stock in cache *)
 let update_cache (cache : (string, cached_stock) Hashtbl.t) (symbol : string)
     (summary : summary) (cum_log_return : float) : unit =
-  <span data-count="0">l</span>et symbol_upper = String.uppercase_ascii symbol in
-  <span data-count="0">l</span>et stock : cached_stock =
+  <span data-count="3">l</span>et symbol_upper = String.uppercase_ascii symbol in
+  <span data-count="3">l</span>et stock : cached_stock =
     {
       symbol = symbol_upper;
       summary;
       cum_log_return;
-      last_updated = current_date_strin<span data-count="0">g</span> ();
+      last_updated = current_date_strin<span data-count="3">g</span> ();
     }
   in
   Hashtbl.replace cache symbol_upper stock
