--- a/_coverage/lib/optimizer.ml.html
+++ b/_coverage/lib/optimizer.ml.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>optimizer.ml &mdash; Coverage report</title>
-    <meta name="description" content="88.46% coverage in lib/optimizer.ml">
+    <meta name="description" content="80.77% coverage in lib/optimizer.ml">
     <link rel="stylesheet" href="../coverage.css"/>
     <script src="../highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
@@ -15,9 +15,10 @@
           <span class="dirname">lib/</span>optimizer.ml
         </a>
       </h1>
-      <h2>88.46%</h2>
+      <h2>80.77%</h2>
     </div>
     <div id="navbar">
+      <span class="unvisited" style="bottom:26.27%"></span>
       <span class="unvisited" style="bottom:16.10%"></span>
       <span class="unvisited" style="bottom:11.02%"></span>
       <span class="unvisited" style="bottom:10.17%"></span>
@@ -113,7 +114,7 @@
 <a id="L84"></a><span > </span>
 <a id="L85"></a><span > </span>
 <a id="L86"></a><span class="visited"> </span>
-<a id="L87"></a><span class="visited"> </span>
+<a id="L87"></a><span class="unvisited"> </span>
 <a id="L88"></a><span > </span>
 <a id="L89"></a><span > </span>
 <a id="L90"></a><span > </span>
@@ -353,8 +354,8 @@ let check_stock_against_profile (profile : risk_profile) (stock : cached_stock) 
 
 (* Helper function to take first n elements *)
 let rec take n = function
-  | <span data-count="8">[</span>] -&gt; []
-  | <span data-count="12">x</span> :: xs -&gt; if n &lt;= 0 then <span data-count="3">[</span>] else <span data-count="9">x</span> :: tak<span data-count="9">e</span> (n - 1) xs
+  | <span data-count="4">[</span>] -&gt; []
+  | <span data-count="0">x</span> :: xs -&gt; if n &lt;= 0 then <span data-count="0">[</span>] else <span data-count="0">x</span> :: tak<span data-count="0">e</span> (n - 1) xs
 
 (* Get recommendations based on risk profile *)
 let get_recommendations (profile : risk_profile)
